--- a/index.html
+++ b/index.html
@@ -2,9 +2,272 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Биология — тест (защищённый)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
+  <style>
+    :root {
+      --bg: #eaf5ea;
+      --card: #fff;
+      --text: #1b3d1b;
+      --primary: #4caf50;
+      --wrong: #e53935;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: var(--bg);
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      font-family: 'Segoe UI', sans-serif;
+      color: var(--text);
+    }
+
+    /* ====== Вертикальная панель слева ====== */
+    #questionPanelWrapper {
+      position: fixed;
+      top: 50px;
+      left: 0;
+      width: 60px;
+      height: 90%;
+      background: #f5f5f5;
+      padding: 5px;
+      border-right: 1px solid #ccc;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      z-index: 100;
+      transition: width 0.3s;
+    }
+
+    #questionPanelWrapper.collapsed { width: 20px; }
+
+    #togglePanelBtn {
+      margin-bottom: 10px;
+      cursor: pointer;
+      padding: 3px 6px;
+      font-size: 14px;
+      background: transparent;
+      border: none;
+    }
+
+    #questionPanel {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      overflow-y: auto;  /* вертикальный скролл */
+      flex-grow: 1;
+      text-align: center;
+      width: 100%;
+    }
+
+    #questionPanel button {
+      flex: 0 0 auto;       /* не растягиваться */
+      width: 36px;
+      height: 36px;
+      min-width: 36px;
+      min-height: 36px;
+      max-width: 36px;
+      max-height: 36px;
+      border-radius: 50%;
+      border: 2px solid #ccc;
+      cursor: pointer;
+      background: #fff;
+      color: #000;
+      font-size: 14px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.2s, transform 0.15s;
+    }
+
+    #questionPanel button:hover { transform: scale(1.05); }
+
+    #questionPanel button.correct { background: #4caf50; color:#fff; border-color:#4caf50; }
+    #questionPanel button.wrong { background: #e53935; color:#fff; border-color:#e53935; }
+
+    #pageNav {
+      margin-top: 8px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      align-items: center;
+      width: 100%;
+    }
+
+    #pageNav button {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 2px solid var(--primary);
+      background: #fff;
+      color: var(--primary);
+      font-weight: bold;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.3s ease;
+    }
+
+    #pageNav button.active {
+      border: 2px solid #2196f3;
+      box-shadow: 0 0 6px rgba(33,150,243,0.7);
+    }
+
+    #pageNav button.correct { background:#4caf50; border-color:#4caf50; color:#fff; }
+    #pageNav button.wrong { background:#e53935; border-color:#e53935; color:#fff; }
+
+    #resetWrapper {
+      margin-top: 8px;
+    }
+
+    #resetBtn {
+      width: 50px;
+      padding: 3px 5px;
+      cursor: pointer;
+      border-radius: 5px;
+      border: 2px solid #ff0000;
+      background: #ff4d4d;
+      color: #fff;
+      font-size: 12px;
+    }
+
+    /* ====== Основной контент ====== */
+    .app {
+      margin-left:70px;
+      padding:20px;
+      max-width: 1000px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .header { margin-bottom: 15px; }
+
+    .card {
+      background: var(--card);
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+      margin-bottom: 16px;
+    }
+
+    .controls, .footer {
+      display: flex;
+      gap: 10px;
+      margin-top: 12px;
+      flex-wrap: wrap;
+    }
+
+    .controls button {
+      padding: 10px 14px;
+      border: none;
+      border-radius: 10px;
+      background: var(--primary);
+      color: #fff;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.08s;
+    }
+
+    .controls button:hover { transform: translateY(-1px); }
+
+    .secondary {
+      background: #81c784;
+    }
+
+    .progress-bar {
+      height: 8px;
+      background: #cfe8cf;
+      border-radius: 4px;
+      overflow: hidden;
+      margin-top: 8px;
+    }
+
+    #progressFill {
+      height: 100%;
+      background: var(--primary);
+      transition: width 0.3s ease;
+    }
+
+    #answers {
+      margin-top: 16px;
+      display: grid;
+      gap: 10px;
+    }
+
+    .answer {
+      position: relative;
+      padding: 12px 16px;
+      border-radius: 12px;
+      border: 2px solid #cfe8cf;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      background: #fff;
+    }
+
+    .answer:hover {
+      background: #f0faf0;
+      transform: scale(1.02);
+    }
+
+    .answer.selected { background: #c8e6c9; transform: scale(1.03); }
+    .answer.correct { border-color: var(--primary); background: #c8e6c9; }
+    .answer.wrong { border-color: var(--wrong); background: #ffcdd2; }
+
+    /* ====== AUTH OVERLAY, WAIT OVERLAY ====== */
+    #authOverlay, #waitOverlay {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,0.45);
+      z-index: 200;
+    }
+
+    #authOverlay .authCard, #waitOverlay .authCard {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      width: 320px;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+
+    #authOverlay input, #authOverlay button, #waitOverlay button {
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    .muted { color: #666; font-size: 14px; }
+
+    .small-ghost {
+      background: transparent;
+      border: 1px solid #ccc;
+      padding: 8px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    /* ====== Адаптив ====== */
+    @media (max-width: 900px) {
+      #questionPanelWrapper { display: none; }
+      .app { margin-left: 16px; padding: 12px; }
+    }
+
+    @media (max-width: 600px) {
+      .card { padding: 14px; }
+      #answers .answer { padding: 10px; font-size: 15px; }
+      #pageNav { display: none; }
+    }
+
+  </style>
 </head>
 <body>
 
@@ -54,7 +317,7 @@
   </main>
 
   <!-- ====== AUTH OVERLAY (видна, если не вошёл) ====== -->
-  <div id="authOverlay" aria-hidden="true">
+  <div id="authOverlay" aria-hidden="true" style="display:flex">
     <div class="authCard" role="dialog" aria-modal="true" aria-labelledby="authTitle">
       <h1 id="authTitle">Доступ к тесту</h1>
       <input id="email" type="email" placeholder="Email" autocomplete="username" />
@@ -77,5 +340,23 @@
 
   <!-- Подключаем главный модуль — в нём инициализация Firebase и запуск теста -->
   <script type="module" src="app.js"></script>
+
+  <script>
+    // поведение кнопки сворачивания панели (простая логика)
+    const wrapper = document.getElementById("questionPanelWrapper");
+    const toggleBtn = document.getElementById("togglePanelBtn");
+    toggleBtn.onclick = () => wrapper.classList.toggle("collapsed");
+
+    // демонстрация — если в панель нужно добавить кнопки до инициализации
+    const qPanel = document.getElementById('questionPanel');
+    if (qPanel && qPanel.children.length === 0) {
+      for (let i = 1; i <= 12; i++) {
+        const b = document.createElement('button');
+        b.textContent = i;
+        b.onclick = () => { /* при инициализации заменить на навигацию */ };
+        qPanel.appendChild(b);
+      }
+    }
+  </script>
 </body>
 </html>
