--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </main>
 
   <!-- ====== AUTH OVERLAY (видна, если не вошёл) ====== -->
-  <div id="authOverlay" inert>
+  <div id="authOverlay">
     <div class="authCard" role="dialog" aria-modal="true" aria-labelledby="authTitle">
       <h1 id="authTitle">Доступ к тесту</h1>
       <input id="email" type="email" placeholder="Email" autocomplete="username" />
@@ -244,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
