--- a/index.html
+++ b/index.html
@@ -527,6 +527,29 @@
 </head>
 <body>
 
+  <style>
+#loadFromCloudBtn {
+    background: #2196F3 !important;
+    color: white !important;
+    border: none !important;
+    padding: 8px 16px !important;
+    border-radius: 4px !important;
+    cursor: pointer !important;
+    font-weight: bold !important;
+    transition: background 0.3s !important;
+    margin-left: 10px !important;
+}
+
+#loadFromCloudBtn:hover {
+    background: #1976D2 !important;
+}
+
+#loadFromCloudBtn:disabled {
+    background: #BBDEFB !important;
+    cursor: not-allowed !important;
+}
+</style>
+
   <!-- ====== Вертикальная панель вопросов ====== -->
   <div id="questionPanelWrapper">
     <button id="togglePanelBtn" aria-label="Свернуть панель" title="Свернуть панель">⇨</button>
@@ -617,3 +640,4 @@
   </script>
 </body>
 </html>
+
