--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Биология — тест (защищённый)</title>
   <link rel="stylesheet" href="style.css" />
-
+  
+<!-- Декоративные био-элементы -->
+<div class="bio-decoration">
+  <div class="bio-element cell-plant"></div>
+  <div class="bio-element dna-helix"></div>
+  <div class="bio-element cell-animal"></div>
+  <div class="bio-element bacteria"></div>
+  <div class="bio-element leaf"></div>
+  <div class="bio-element molecule"></div>
+  <div class="bio-element amoeba"></div>
+  <div class="bio-element chloroplast"></div>
+  <div class="bio-element mitochondria"></div>
+  <div class="bio-element virus"></div>
+  <div class="bio-element spore"></div>
+  <div class="bio-element cell-plant" style="animation-duration: 25s;"></div>
+</div>
+  
   <!-- ====== Встроенный стиль панели и адаптивность ====== -->
   <style>
     /* ====== Вертикальная панель слева ====== */
@@ -640,4 +656,5 @@
   </script>
 </body>
 </html>
+
 
